--- a/spotilicious/res/layout/main.xml
+++ b/spotilicious/res/layout/main.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android" 
-   android:id="@+id/myGrid"
-   android:layout_width="match_parent" 
-   android:layout_height="match_parent"
-   android:padding="10dp"
-   android:verticalSpacing="10dp"
-   
-   android:horizontalSpacing="10dp"
-   android:numColumns="auto_fit"
-   android:columnWidth="60dp"
-   android:stretchMode="columnWidth"
-   android:gravity="center"
-/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="fill_parent"
+android:layout_height="fill_parent"
+android:orientation="vertical" >
+<TextView
+android:layout_width="fill_parent"
+android:layout_height="wrap_content"
+android:text="Spotilicious" />
+<GridView
+android:id="@+id/gridview"
+android:layout_width="fill_parent"
+android:layout_height="fill_parent"
+android:padding="5dp"
+android:verticalSpacing="5dp"
+android:horizontalSpacing="10dp"
+android:numColumns="auto_fit"
+android:columnWidth="60dp"
+android:stretchMode="columnWidth"
+android:gravity="center_horizontal"/>
+</LinearLayout>
